# PaceyServer

./: CMakeLists.txt
includes/: connection_state.hpp  packet.hpp
includes/packets/: bundke.hpp  finish_config.hpp  handshake_packet.hpp  keep_alive_packet.hpp  login_start_packet.hpp  login_success_packet.hpp  ping_packet.hpp  plugin_message_packet.hpp  pong_packet.hpp  query_block_entity_tag_packet.hpp  spawn_entity_packet.hpp  status_response_packet.hpp
includes/packets/packet_in/config/: client_infos_packet.hpp
includes/packets/packet_in/handshake/: handshake_packet.hpp
includes/packets/packet_in/login/: login_start_packet.hpp
includes/packets/packet_out/login/: login_success_packet.hpp
includes/packets/packet_out/play/: EntityAnimPacket.hpp
includes/packets/packet_out/status/: ping_packet.hpp  pong_packet.hpp  status_response_packet.hpp
includes/utils/: functions.hpp  logger.hpp
sources/: main.cpp
